--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "git-filter-repo": "^0.0.30",
     "googleapis": "^150.0.1",
+    "imagekit": "^6.0.0",
     "node-appwrite": "^17.0.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
