--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.0",
-    "express": "^5.1.0",
+    "dotenv": "^17.0.0",  
+    "express": "^4.18.2",
     "git-filter-repo": "^0.0.30",
     "googleapis": "^150.0.1",
     "imagekit": "^6.0.0",
     "node-appwrite": "^17.0.0",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
-    "open": "^10.1.2"
+    "open": "^10.1.2",
+    "path-to-regexp": "^6.3.0"
   }
 }
